[package]
name = "egui-rotate"
version = "1.1.1"
edition = "2021"
rust-version = "1.92"
authors = ["Sylvain Gargasson <sylvain.gargasson@gmail.com>"]
description = "Viewport rotation (0/90/180/270°) for egui as a plugin — transparent per-window input/output rotation and a rotated software cursor."
keywords = ["egui", "rotation", "viewport", "kiosk", "pinball"]
categories = ["gui", "graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Le-Syl21/egui-rotate"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
software-cursor = []
serde = ["dep:serde", "egui/serde"]

[dependencies]
# Pinned to the 0.34 minor: egui 0.35 changed the `Plugin` trait signatures
# (`input_hook`/`output_hook` gained a `&Context` parameter), so one code base
# cannot span both. 0.35 support will land in a dedicated release.
egui = { version = ">=0.34, <0.35", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
egui = ">=0.34, <0.35"
egui_glow = ">=0.34, <0.35"
egui-winit = ">=0.34, <0.35"
glow = "0.17"
glutin = "0.32"
glutin-winit = "0.5"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "rotated_demo"
required-features = ["software-cursor"]

[[example]]
name = "plugin_demo"
required-features = ["software-cursor"]

